@@ -9,6 +9,12 @@ Version 1.18-12 (opened September 17, 2010)
 	not yet seen a case where a terms is dropped. Abandoned dangerous
 	practice of getting the R2.all directly from a fitted model of the
 	'scope' since this may have different lhs.
+
+	* anova.ccalist: removed. Revisions were 1273, 1274, 1276. Could
+	not make this work consistently with other anova models, except
+	with 'model = "direct"'. The function would also chage the API so
+	that "..." come as the second argument breaking partial matching
+	of other arguments. 
 	
 Version 1.18-11 (closed September 17, 2010)
 
